added age to user model and everything seems to be working still

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,11 +13,9 @@ html
                         span.icon-bar
                         span.icon-bar
                         span.icon-bar
-                    a.navbar-brand(href='#') User Manager
+                    a.navbar-brand(href='/') User Listing
                 #navbar.collapse.navbar-collapse
                     ul.nav.navbar-nav
-                        li
-                            a(href='/') Home
                         li
                             a(href='/users/add') Add User
         .container
@@ -25,7 +23,6 @@ html
             br
             hr
             footer
-                p Copyright &copy; 2017
         script(src='/jquery/jquery.js')
         script(src='bootstrap/bootstrap/js/bootstrap.js')
         script(src='/js/main.js')
