--- a/views/add_user.pug
+++ b/views/add_user.pug
@@ -4,13 +4,16 @@ block content
     h1 #{title}
     form(method='POST', action='/users/add')
         #form-group
-            label first_name:
+            label First Name:
             input.form-control(name='first_name', type='text')
         #form-group
-            label last_name:
+            label Last Name:
             input.form-control(name='last_name', type='text')
         #form-group
-            label email:
+            label Email:
             input.form-control(name='email', type='text')
+        #form-group
+            label Age:
+            input.form-control(name='age', type='text')
         br
         input.btn.btn-primary(type='submit', value='Submit')
