--- a/views/edit_user.pug
+++ b/views/edit_user.pug
@@ -4,13 +4,16 @@ block content
     h1 #{title}
     form(method='POST', action='/users/edit/'+user._id)
         #form-group
-            label first_name:
+            label First name:
             input.form-control(name='first_name', type='text', value=user.first_name)
         #form-group
-            label last_name:
+            label Last name:
             input.form-control(name='last_name', type='text', value=user.last_name)
         #form-group
-            label email:
+            label Email:
             input.form-control(name='email', type='text', value=user.email)
+        #form-group
+            label Age:
+            input.form-control(name='age', type='text', value=user.age)
         br
         input.btn.btn-primary(type='submit', value='Submit')
